# KlimDev

./: .gitignore  README.md  package.json
klimdev/: package.json  tsconfig.json
klimdev-opencode/: README.md  package.json
klimdev-tui/: Cargo.toml
klimdev-tui/src/: main.rs
klimdev-tui/src/api/: client.rs  mod.rs  models.rs  streaming.rs
klimdev-tui/src/app/: actions.rs  mod.rs  state.rs
klimdev-tui/src/config/: mod.rs  settings.rs
klimdev-tui/src/telemetry/: metrics.rs  mod.rs
klimdev-tui/src/ui/: layout.rs  mod.rs  theme.rs
klimdev-tui/src/ui/components/: chat.rs  header.rs  input.rs  mod.rs  sidebar.rs  statusbar.rs  telemetry.rs
klimdev-vscode/: .vscodeignore  esbuild.config.js  package-lock.json  package.json  tsconfig.json
klimdev-vscode/src/: extension.ts
klimdev-vscode/src/actions/: code-actions.ts
klimdev-vscode/src/api/: nim-client.ts  prompts.ts
klimdev-vscode/src/chat/: chat-provider.ts  chat-webview.ts
klimdev-vscode/src/completion/: completion-provider.ts
klimdev-vscode/src/edit/: inline-edit.ts
klimdev/src/: index.ts
klimdev/src/api/: client.ts  models.ts  streaming.ts  types.ts
klimdev/src/cli/: index.ts
klimdev/src/cli/commands/: chat.tsx  config.ts  models.ts
klimdev/src/config/: defaults.ts  index.ts
klimdev/src/core/: history.ts  session.ts  workspace.ts
klimdev/src/ui/: App.tsx  theme.ts
klimdev/src/ui/components/: ChatView.tsx  Explorer.tsx  Header.tsx  InputBar.tsx  Message.tsx  ModelPanel.tsx  Sessions.tsx  Sidebar.tsx  StatusBar.tsx  Telemetry.tsx
klimdev/src/utils/: format.ts  time.ts  truncate.ts
(+4 files in other folders)
